Configuration fixes Smoke test for application context Initial commit for gateway application

--- a/SdaConfigServer/src/test/resources/application.yml
+++ b/SdaConfigServer/src/test/resources/application.yml
@@ -2,3 +2,8 @@ spring:
   cloud:
     config:
       enabled: false
+      server:
+        git:
+          uri: "file:/${classpath:}/stubs/config-server"
+  security:
+    enabled: false
