--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -55,9 +55,9 @@ jobs:
       id: jacoco
       uses: madrapps/jacoco-report@v1.2
       with:
-        paths:
-        - "${{ github.workspace }}/sda-config-server/build/reports/jacoco/test/jacocoTestReport.xml",
-        - "${{ github.workspace }}/sda-gateway/build/reports/jacoco/test/jacocoTestReport.xml"
+        paths: |
+          "${{ github.workspace }}/sda-config-server/build/reports/jacoco/test/jacocoTestReport.xml",
+          "${{ github.workspace }}/sda-gateway/build/reports/jacoco/test/jacocoTestReport.xml"
         token: ${{ secrets.GITHUB_TOKEN }}
         min-coverage-overall: 10
         min-coverage-changed-files: 10
