--- a/.github/workflows/pr-builder.yml
+++ b/.github/workflows/pr-builder.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: PR Build - Java CI with Gradle
 
 on:
   pull_request:
@@ -51,12 +51,20 @@ jobs:
       with:
         files: "${{ github.workspace }}/**/build/test-results/**/*.xml"
 
+    - name: Cerify environment
+      run: |
+        echo ${{ github.workspace }}
+        ls ${{ github.workspace }}
+        ls ${{ github.workspace }}/sda-config-server
+        ls ${{ github.workspace }}/sda-config-server/build/reports
+        ls ${{ github.workspace }}/sda-config-server/build/reports/jacoco/test
+
     - name: Add coverage to PR
       id: jacoco
       uses: madrapps/jacoco-report@v1.2
       with:
         paths:
-        - "${{ github.workspace }}/sda-config-server/build/reports/jacoco/test/jacocoTestReport.xml",
+        - "${{ github.workspace }}/sda-config-server/build/reports/jacoco/test/jacocoTestReport.xml"
         - "${{ github.workspace }}/sda-gateway/build/reports/jacoco/test/jacocoTestReport.xml"
         token: ${{ secrets.GITHUB_TOKEN }}
         min-coverage-overall: 10
