--- a/.github/workflows/push-deployer.yml
+++ b/.github/workflows/push-deployer.yml
@@ -5,19 +5,16 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Push Deploy - Java CI with Gradle
+name: Deployer - Java CI with Gradle
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
+    branches: [ "main" ]
     inputs:
       module_name:
         description: 'Module to deploy (sda-config-server, sda-gateway)'
         required: true
         default: 'sda-config-server'
-      tags:
-        description: 'Module name to deploy'
 
 jobs:
   build:
